--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('/sw.js')
             .then((registration) => {
-              console.log('SW registered: ', registration);
+              // console.log('SW registered: ', registration);
             })
             .catch((registrationError) => {
               console.log('SW registration failed: ', registrationError);
